<resources>
    <string name="app_name">Wallpaper App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_msg">No data returned from server. Please try again later</string>
    <string name="network_error_msg">Error while fetching data. Please check network</string>
    <string name="unknown_error_msg">Unknown Error. %1$s</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="loading_error_msg">Something wrong try again after some time</string>
    <string name="set_wallpaper">SET WALLPAPER</string>
    <string name="set_lock_screen">SET LOCK SCREEN</string>
    <string name="save_to_gallery">SAVE TO GALLERY</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="set_both">SET BOTH</string>
    <string name="search">Search</string>
    <string name="photographer_name">Photographer: %1$s</string>

    <string-array name="countries_array">
        <item>Taj Mahal</item>
        <item>Motivational</item>
        <item>quotes</item>
        <item>Inspirational</item>
        <item>Mountain</item>
        <item>River</item>
        <item>Programming</item>
        <item>Sports</item>
        <item>Logo</item>
        <item>Technology</item>
        <item>Space</item>
        <item>Saying</item>
        <item>Patterns</item>
        <item>News and Politics</item>
        <item>Music</item>
        <item>Money</item>
        <item>Men</item>
        <item>Cat</item>
        <item>Home</item>
        <item>House</item>
        <item>Dog</item>
        <item>Bike</item>
        <item>Ship</item>
        <item>Boat</item>
        <item>Abstract</item>
        <item>Places</item>
        <item>Beautiful Places</item>
        <item>Wonders</item>
        <item>Monkey</item>
        <item>Mouse</item>
        <item>Computer</item>
        <item>Keyboard</item>
        <item>Nature</item>
        <item>Superman</item>
        <item>Batman</item>
        <item>Car</item>
        <item>Cricket</item>
        <item>Movie</item>
        <item>Hollywood</item>
        <item>Mango</item>
        <item>Coins</item>
        <item>Aeroplane</item>
        <item>Helicopter</item>
        <item>Sweets</item>
        <item>Games</item>
        <item>Funny</item>
        <item>Entertainment</item>
        <item>Designs</item>
        <item>Drawing</item>
        <item>Vehicles</item>
        <item>Anime</item>
        <item>Trending</item>
        <item>Market</item>
        <item>Food</item>
        <item>Hotel</item>
        <item>Restaurant</item>
        <item>Chinese</item>
        <item>Flag</item>
    </string-array>
</resources>