<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.BottomOptionsFragment">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:textColor="@color/text_black"
        android:text="@string/what_would_you_like_to_do"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/design" />

    <LinearLayout
        android:id="@+id/set_home_wallpaper"
        style="@style/bottom_dialog_linear_layout"
        android:layout_marginTop="@dimen/_28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title">
        <View
            style="@style/bd_ll_view"
            android:background="@drawable/baseline_home_24"/>
        <TextView
            style="@style/bd_ll_text_view"
            android:text="@string/set_wallpaper"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_lock_screen"
        style="@style/bottom_dialog_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_home_wallpaper">
        <View
            style="@style/bd_ll_view"
            android:background="@drawable/baseline_lock_24"/>
        <TextView
            style="@style/bd_ll_text_view"
            android:text="@string/set_lock_screen"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_both"
        style="@style/bottom_dialog_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_lock_screen">
        <View
            style="@style/bd_ll_view"
            android:background="@drawable/baseline_add_photo_alternate_24"/>
        <TextView
            style="@style/bd_ll_text_view"
            android:text="@string/set_both"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_to_gallery"
        style="@style/bottom_dialog_linear_layout"
        android:layout_marginBottom="@dimen/_22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_both"
        app:layout_constraintVertical_bias="0.0">

        <View
            style="@style/bd_ll_view"
            android:background="@drawable/baseline_download_24" />

        <TextView
            style="@style/bd_ll_text_view"
            android:text="@string/save_to_gallery" />
    </LinearLayout>

    <View
        android:id="@+id/design"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_6dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@drawable/dialog_design_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>